# legal_assistant

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: build.yml  test.yml
backend/: .env_example  Dockerfile  pyproject.toml
backend/src/: app.py  env.py
backend/src/api/cases/: consts.py  controller.py  model.py  router.py  service.py
backend/src/dev_env/: api_req.http  docker-compose.dev.yml
backend/src/engine/: knowledge_graph.py  llm_client_factory.py  prompts.py  rag_pipeline.py
backend/src/engine/loaders/: file_extractor.py
backend/src/engine/retrievers/: rag_retriever.py  synonyms_retriever.py
backend/src/utils/: api_error_response.py  db_client.py  status.py
backend/tests/integration/: test_cases.py
backend/tests/unit_tests/: conftest.py  test_file_extractor.py  test_llm_client_factory.py  test_rag_pipeline.py  test_service.py
docs/: PROJECT.md
frontend/: .env_example  Dockerfile  pyproject.toml
frontend/src/: main.py
frontend/src/components/: cases.py  side_bar.py  suggested_questions.py
frontend/src/pages/: add_case.py  graph.py
frontend/src/utils/: case_service.py  logger.py  rest_client.py  utils.py
