[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["mor <mordvash1@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
llama-index-core = "^0.12.10.post1"
llama-index-readers-file = "^0.4.2"
llama-index-llms-ollama = "^0.5.0"
llama-index-embeddings-huggingface = "^0.5.0"
fastapi = {extras = ["standard"], version = "^0.115.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
