[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["mor <mordvash1@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11.9"
llama-index-core = "^0.12.10.post1"
llama-index-readers-file = "^0.4.2"
llama-index-llms-ollama = "^0.5.0"
llama-index-embeddings-huggingface = "^0.5.0"
fastapi = {extras = ["standard"], version = "^0.115.6"}
python-docx = "^1.1.2"
llama-index-llms-gemini = "^0.4.3"
llama-index-embeddings-gemini = "^0.3.1"
llama-index-graph-stores-falkordb = "^0.3.0"
pydantic-settings = "^2.7.1"
llama-index = "^0.12.18"
llama-index-llms-openai = "^0.3.20"
llama-index-embeddings-openai = "^0.3.1"
falkordb = "^1.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
