[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["mor <mordvash1@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.42.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
